# faceflash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_live.py  pyproject.toml  run_benchmarks.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_accuracy.py  bench_additional.py  bench_alignment.py  bench_ann_comparison.py  bench_approaches.py  bench_batch_qps.py  bench_clustering.py  bench_compression_isolation.py  bench_face_libraries.py  bench_far_frr.py  bench_identification.py  bench_memory.py  bench_multimodel.py  bench_nbits.py  bench_nbits_analysis.py  bench_nbits_grid.py  bench_scalability.py  bench_search.py  bench_simd.py  bench_timing.py  bench_vector_search.py  bench_vggface2.py
datasets/: lfw.yaml  vggface2.yaml
docs/: BENCHMARKS_1M.md  architecture.md  benchmarks.md  datasets.md
examples/: README.md  attendance_system.py  basic_search.py  build_index.py  demo_cctv_search.py  face_dedup.py  faceflash_reproduce_colab.ipynb  photo_organizer.py  security_watchlist.py  video_search.py  video_timeline.py
faceflash/: __init__.py  align.py  attributes.py  cluster.py  detect.py  embed.py  engine.py  index.py  pca_quantize.py  quantize.py  video.py
results/: bench_ablation.json  bench_alignment.json  bench_approaches.json  bench_baselines.json  bench_batch_qps.json  bench_candidate_sweep.json  bench_clustering.json  bench_comprehensive.json  bench_compression_isolation.json  bench_far_frr_lfw.json  bench_identification_ms1m.json  bench_lfw.json  bench_lfw_rigorous.json  bench_memory.json  bench_multimodel.json  bench_nbits.json  bench_nbits_analysis.json  bench_nbits_grid.json  bench_nbits_grid_1m.json  bench_pipeline.json  bench_real_faces.json  bench_scale.json  bench_scale_20260624_032614.json  bench_simd.json  bench_tier1.json  bench_tier2.json  bench_tier3.json
results/runpod/: bench_ann_ms1m_20260625_015852.json  bench_ann_ms1m_20260625_200125.json  bench_ann_ms1m_20260625_222333.json  bench_ann_ms1m_20260626_000951.json  bench_ann_ms1m_20260626_041025.json  bench_ann_ms1m_20260626_183631.json  bench_ann_ms1m_20260626_213711.json
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: extract_lfw_embeddings.py  extract_ms1m.py  extract_vggface2_fast.py  hf_images.py  hf_sync.py  make_demo_gif.py  plot_architecture.py  plot_charts.py  plot_figures.py  plot_scale_comparison.py  preflight_check.py  runpod_benchmark.py  runpod_full.sh  runpod_full_v2.sh  runpod_ms1m.sh
tests/: test_faceflash.py  test_index.py  test_index_fix.py  test_quantizer.py  test_video.py
