[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "faceflash"
version = "0.1.0"
description = "Fast face retrieval via PCA+ITQ binary quantization — up to 96x less memory than HNSW at equal recall"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Raghavender Grudhanti", email = "raghavenderreddy1212@gmail.com"}
]
keywords = ["face-recognition", "vector-search", "binary-quantization", "arcface", "memory-efficient"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "tqdm>=4.60",
]

# onnxruntime is an EXTRA, not a hard dep, to avoid clobbering an existing
# onnxruntime-gpu install (they share the `onnxruntime` import but are
# different PyPI packages). Install one explicitly:
#   pip install faceflash[cpu]   # CPU inference
#   pip install faceflash[gpu]   # CUDA inference
[project.optional-dependencies]
cpu = ["onnxruntime>=1.16"]
gpu = ["onnxruntime-gpu>=1.16"]
dev = ["pytest", "matplotlib", "pandas", "onnxruntime>=1.16"]
benchmark = ["faiss-cpu>=1.7", "usearch>=2.0", "hnswlib>=0.7"]

[project.urls]
Homepage = "https://github.com/raghavenderreddygrudhanti/faceflash"

# Maturin builds the Rust POPCNT backend (faceflash_core) into the wheel and
# bundles the pure-Python `faceflash` package alongside it. So `pip install
# faceflash` ships the fast Rust search by default — no manual build step.
[tool.maturin]
python-source = "."
manifest-path = "rust/Cargo.toml"
module-name = "faceflash._core"
